fix zoomContainer images overlap categories

--- a/public/frontend/stylesheets/custom.css
+++ b/public/frontend/stylesheets/custom.css
@@ -227,3 +227,6 @@ a.skype > img {
 .product_price {
     font-size: 15px;
 }
+.zoomContainer {
+    z-index: 100;
+}
